--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.2.0'
@@ -73,6 +74,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation 'com.squareup.retrofit2:converter-scalars:2.8.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     implementation "io.coil-kt:coil-compose:1.3.2"
 
